# gke-template

./: README.md  build.sh  configure.sh  deploy.sh  kill-cluster.sh  new-cluster.sh  teardown.sh  template.sh  tests.sh  vars.sh
postgres/k8s/: config.yaml  pvc.yaml  service.yaml  statefulset.yaml
redis/k8s/: config.yaml  pvc.yaml  service.yaml  statefulset.yaml
server/builder/: Dockerfile  server-builder.cabal
server/hs/: Dockerfile  server.cabal
server/hs/fuzzer/: Dockerfile  Fuzzer.hs
server/hs/main/: Dockerfile
server/hs/migrate/: Dockerfile  Migrate.hs
server/hs/src/: Client.hs  Server.hs
server/hs/src/Server/: API.hs  Config.hs  Prelude.hs
server/hs/src/Server/Cryptography/: RSA.hs
server/hs/src/Server/Persistence/: Postgres.hs  Redis.hs
server/k8s/: config.yaml  deployment.yaml  fuzzer.yaml  hpa.yaml  migrate.yaml  service.yaml
server/runner/: Dockerfile
